[tool.poetry]
name = "cc_date"
version = "0.2.1"
description = "For use with Ivycomb's Cosmic Critters date format."
authors = ["blob1807"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
